[package]
name = "xiangyun"
version = "0.2.2"
license = "MIT"
authors = ["3442853561<3442853561@qq.com>"]
keywords = ["random", "rand"]

description = "Xiangyun is the crate for random with Rust"
repository = "https://github.com/RustDream/Xiangyun"

[lib]
name = "xiangyun"
path = "./src/lib.rs"

[[bin]]
name = "main"
path = "./src/examples/main.rs"
